@@ -1,0 +1,42 @@
+# StarPU --- Runtime system for heterogeneous multicore architectures.
+#
+# Copyright (C) 2013  Centre National de la Recherche Scientifique
+#
+# StarPU is free software; you can redistribute it and/or modify
+# it under the terms of the GNU Lesser General Public License as published by
+# the Free Software Foundation; either version 2.1 of the License, or (at
+# your option) any later version.
+#
+# StarPU is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+#
+# See the GNU Lesser General Public License in COPYING.LGPL for more details.
+
+The makefile in this directory should be used to test the compilation and execution of StarPU examples against an installed version of StarPU.
+
+For example, if StarPU is installed in
+
+$HOME/softs/starpu-1.1
+
+and the examples to be tested in
+
+$HOME/src/starpu/trunk/examples
+
+one first need to set the following variables
+
+export STARPUPATH=$HOME/softs/starpu-1.1
+export PKG_CONFIG_PATH=$STARPUPATH/lib/pkgconfig/:$PKG_CONFIG_PATH
+export LD_LIBRARY_PATH=$STARPUPATH/lib:$LD_LIBRARY_PATH
+
+and then call
+
+make STARPU=starpu-1.1 EXAMPLE=$HOME/src/starpu/trunk/examples
+
+to produce the executables.
+
+Examples using an old StarPU API can also be tested, for example the branch 1.0
+
+make STARPU=starpu-1.0 EXAMPLE=$HOME/src/starpu/branches/starpu-1.0/examples/
+
+Note the variable STARPU is set to starpu-1.0 to use the 1.0 API.
